--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/pg": "^8.10.9",
     "concurrently": "^8.2.2",
     "nodemon": "^3.0.2",
     "typescript": "^5.3.3"
